--- a/OrderViewerUI/Layout/NavMenu.razor
+++ b/OrderViewerUI/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">OrderViewerUI</a>
+        <a class="navbar-brand" href="">Order Viewer</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -11,12 +11,7 @@
     <nav class="nav flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="orders">
-                <span class="bi bi-card-list" aria-hidden="true"></span> Orders
+                <span class="bi bi-list-ul" aria-hidden="true"></span> Orders
             </NavLink>
         </div>
     </nav>
